compiler/flux-typesystem/src/snapshots/flux_typesystem__check__tests__typecheck_f32_float.snap
---
source: compiler/flux-typesystem/src/check.rs
expression: "check(f32!(), float!())"
---
f32 <-> Float ✓
