compiler/flux-typesystem/src/snapshots/flux_typesystem__check__tests__typecheck_f64_float.snap
---
source: compiler/flux-typesystem/src/check.rs
expression: "check(f64!(), float!())"
---
f64 <-> Float ✓
