compiler/flux-typesystem/src/snapshots/flux_typesystem__check__tests__typecheck_float_float.snap
---
source: compiler/flux-typesystem/src/check.rs
expression: "check(float!(), float!())"
---
Float <-> Float ✓
