compiler/flux-typesystem/src/snapshots/flux_typesystem__check__tests__typecheck_int_int.snap
---
source: compiler/flux-typesystem/src/check.rs
expression: "check(int!(), int!())"
---
Int <-> Int ✓
